Update lab based on Q&A

--- a/lab-python-lambda-map-reduce-filter.ipynb
+++ b/lab-python-lambda-map-reduce-filter.ipynb
@@ -142,28 +142,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "id": "25073469-7258-4fc6-b0a0-ef8ea57688fe",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "<lambda>() missing 1 required positional argument: 'item2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m debits_sorted \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(debits, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m item:item[\u001b[38;5;241m0\u001b[39m],reverse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      2\u001b[0m debits_sorted\n\u001b[0;32m----> 4\u001b[0m sort_descending \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m item1,item2:item1\u001b[38;5;241m>\u001b[39mitem2, debits))\n",
-      "\u001b[0;31mTypeError\u001b[0m: <lambda>() missing 1 required positional argument: 'item2'"
-     ]
+     "data": {
+      "text/plain": [
+       "[(-100, 'debit'),\n",
+       " (-250, 'debit'),\n",
+       " (-300, 'debit'),\n",
+       " (-850, 'debit'),\n",
+       " (-1200, 'debit')]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
     "debits_sorted = sorted(debits, key=lambda item:item[0],reverse=True)\n",
     "debits_sorted\n",
-    "\n",
-    "sort_descending = list(map(lambda item1,item2:item1>item2, debits))\n",
     "\n",
     "# why do we need to create a sort_descending function? "
    ]
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "id": "69e24c3b-385e-44d6-a8ed-705a3f58e696",
    "metadata": {},
    "outputs": [],
@@ -259,25 +260,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "id": "0906a9b0-d567-4786-96f2-5755611b885e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1020.0, 2020.0, 515.0]"
+       "{('balance', 515.0), ('balance', 1020.0), ('balance', 2020.0)}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "balances_oneyear = list(map(lambda item:item['balance']*(1+item['interest_rate']), accounts))\n",
+    "balances_oneyear = list(map(lambda item:{item['balance']*(1+item['interest_rate']), 'intrest':account['interest']}, accounts))\n",
     "balances_oneyear\n",
+    "\n",
+    "updated_accounts = {('balance',balance) for balance in balances_oneyear}\n",
+    "updated_accounts\n",
     "\n",
     "# how to make it so that it's a dictionary again?"
    ]
@@ -334,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "02b2c83e",
+   "id": "0ebc2177",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "63d25d0c",
+   "id": "45512e08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3156134b",
+   "id": "b3bb8a76",
    "metadata": {},
    "outputs": [
     {
