update lab based on q&a

--- a/lab-python-lambda-map-reduce-filter.ipynb
+++ b/lab-python-lambda-map-reduce-filter.ipynb
@@ -260,30 +260,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 81,
    "id": "0906a9b0-d567-4786-96f2-5755611b885e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{('balance', 515.0), ('balance', 1020.0), ('balance', 2020.0)}"
+       "[{'balance': 1020.0, 'interest_rate': 0.02},\n",
+       " {'balance': 2020.0, 'interest_rate': 0.01},\n",
+       " {'balance': 515.0, 'interest_rate': 0.03}]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "balances_oneyear = list(map(lambda item:{item['balance']*(1+item['interest_rate']), 'intrest':account['interest']}, accounts))\n",
+    "balances_oneyear = list(map(lambda item:{'balance':item['balance']*(1+item['interest_rate']), 'interest_rate':item['interest_rate']}, accounts))\n",
     "balances_oneyear\n",
     "\n",
-    "updated_accounts = {('balance',balance) for balance in balances_oneyear}\n",
-    "updated_accounts\n",
-    "\n",
-    "# how to make it so that it's a dictionary again?"
+    "# add curly brackets to lambda function to force dictionary into list"
    ]
   },
   {
@@ -338,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0ebc2177",
+   "id": "63305c5a",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "45512e08",
+   "id": "91ce327e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b3bb8a76",
+   "id": "8b7cd976",
    "metadata": {},
    "outputs": [
     {
